finished campaign section

--- a/ETL_Mini_Project_AHolmes.ipynb
+++ b/ETL_Mini_Project_AHolmes.ipynb
@@ -1802,7 +1802,12 @@
     }
    ],
    "source": [
-    "# Rename the blurb, launched_at, and deadline columns.\n"
+    "# Rename the blurb, launched_at, and deadline columns.\n",
+    "#- The \"blurb\" column is renamed as \"description.\"\n",
+    "#- The \"launched_at\" column is renamed as \"launch_date\" and converted to a datetime format. \n",
+    "#- The \"deadline\" column is renamed as \"end_date\" and converted to a datetime format.\n",
+    "\n",
+    "campaign_df.rename(columns = {\"blurb\": \"description\", \"launched_at\" : \"launch_date\", \"deadline\" : \"end_date\"}, inplace = True)"
    ]
   },
   {
